# ros-handbook

./: CMakeLists.txt.template  README.md  package.xml.template
claw_example/: README.md
claw_example/claw_control/: CMakeLists.txt  package.xml
claw_example/claw_control/config/: effort_controller.yaml
claw_example/claw_control/launch/: claw.launch  claw.yaml.launch  claw_control.launch  effort_controller.launch.xml  joint_state_controller.launch.xml
claw_example/claw_description/: CMakeLists.txt  README.md  package.xml
claw_example/claw_description/launch/: claw.launch  description.launch.xml  display.launch
claw_example/claw_description/rviz/: claw.rviz
claw_example/claw_description/urdf/: claw.urdf.xacro  claw.xacro
claw_example/claw_gazebo/: CMakeLists.txt  package.xml
claw_example/claw_gazebo/launch/: claw.launch  claw_in_empty_world.launch  claw_with_mandarin.launch
claw_example/claw_gazebo/models/mandarin/: model.config  model.sdf
claw_example/claw_gazebo/worlds/: mandarin.world
robot_description/: README.md
robotic_arm_cad/: arm_link.ipt  joint_hub.ipt  robotic_arm.iam  shoulder_base.ipt
robotic_arm_exercise/robotic_arm_description/: README.md
robotic_arm_exercise/robotic_arm_description/meshes/: arm_link.stl  joint_hub.stl  shoulder_base.stl
