<package>
  <name>claw_gazebo</name>
  <version>1.0.0</version>
  <description>UCRG Team 1 mandarin claw for challenge 1.</description>
  
  <maintainer email="dennuguyen@gmail.com" />
  
  <author email="dennuguyen@gmail.com">Dan Nguyen</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <!-- Note that claw_gazebo depends on claw_control and claw_description. -->
  <run_depend>claw_control</run_depend>
  <run_depend>claw_description</run_depend>

  <export>
    <!-- Most convenient way to give Gazebo the path to our local models and worlds folder. -->
    <gazebo_ros gazebo_model_path="${prefix}/models" />
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
  </export>
</package>
